--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,106 @@
 /* Add styling for your page here */
 
-.App {
-
-}
-
-.BakeryItem {
+h1 {
+    text-align: left;
+    margin: 1.25rem;
+    color: red;
+  }
   
-}
+  h2 {
+    text-align: center;
+    margin: 1.25rem;
+    
+  }
+  
+  h3 {
+    text-align: center;
+    margin: 0.25rem;
+  }
+  
+  
+  .items-container {
+    width: 80vw;
+    display: flex;
+    flex-flow: wrap;
+    gap: 30px;
+    padding: 15px;
+    justify-content: center;
+  }
+  
+  .cart-container {
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: left;
+    position: fixed;
+    gap: 10px;
+    left: 80%;
+    top: 100px;
+    background-color: rgb(233, 160, 69);
+  }
+  
+  .cart-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: max-content;
+  }
+  
+  .cart-item > * {
+    margin: 0 5px;
+  }
+  
+  .total {
+    position: relative;
+    top: 50px;
+    
+  }
+  
+  .bakery-item {
+    background-color: rgb(167, 97, 37);
+    position: relative;
+    width: 300px;
+    height: 350px;
+  }
+  
+  .item-info {
+    padding:0px;
+  }
+  
+  .item-description {
+
+    margin: 5px;
+    padding: 5px;
+  }
+  
+  .bakery-image {
+    height: 205px;
+    width: 100%;
+  }
+  
+  .add-button {
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 10px;
+    right: 118px;
+    background-color: rgb(161, 192, 219);
+    border: 1px solid rgb(73, 128, 176);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: ease-in-out 0.1s;
+    padding: 5px;
+  }
+  
+ 
+  
+  .add-button:active {
+    background-color: rgb(173, 210, 243);
+    transition: ease-in-out 0.1s;
+  }
+  
+  .price {
+    position: absolute;
+    top: 242px;
+    left: 118px;
+  }
